--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,9 +27,10 @@
             android:name=".Vista.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".Vista.DetalleActivity" />
-        <activity android:name=".Vista.BuscarActivity"></activity>
+        <activity android:name=".Vista.BuscarActivity" />
+        <activity android:name=".Vista.VentanaRegistro"></activity>
     </application>
 
 </manifest>
