--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,5 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-# systemProp.https.proxyHost=192.168.113.12
-# systemProp.https.proxyPort=8080
+systemProp.https.proxyHost=192.168.113.12
+systemProp.https.proxyPort=8080
